okay i think we're actually done now

--- a/index.html
+++ b/index.html
@@ -385,3 +385,11 @@
 </body>
 
 </html>
+
+<!-- 
+I'm not entirely sure I understand what exactly I'm being asked (should this be more technical or conceptual?). 
+But, to be clear, I'm interpreting this question as "how would you make it easier for users to add alt-text to their posts?"
+
+To make it easier for users to add alt-text to their posts, I would add a text box under the comments text box for alt-text. 
+Doing so would make it so that it isn't some obscure feature that users would have to go way out of their way to find.
+-->
